--- a/test.html
+++ b/test.html
@@ -104,13 +104,14 @@
     <a class="logo-name" href="#!">CENTER</a>
   </div> -->
 
-  <div class="introduction">
+  <!-- <div class="introduction">
     <h3 class="heading-3 introduction__title">Kids Are The Best
       Explorers In The World</h3>
-    <p class="introduction__content">Since 1992 Kiddy Center has been providing top-quality, AMI certified Montessori education to infants, elementary, and preschool aged children in San Diego.</p>
-  </div>
+    <p class="introduction__content">Since 1992 Kiddy Center has been providing top-quality, AMI certified Montessori
+      education to infants, elementary, and preschool aged children in San Diego.</p>
+  </div> -->
 
-  <div class="accordion" id="accordionExample">
+  <!-- <div class="accordion" id="accordionExample">
     <div class="card pd-reset-0 card-modify">
       <div class="card-header card-header-modify pd-reset-0 buttons" data-toggle="collapse" data-target="#collapseOne"
         aria-expanded="false" aria-controls="collapseOne" id="headingOne">
@@ -154,7 +155,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="accordion" id="accordionExample">
     <div class="card pd-reset-0 card-modify">
@@ -207,14 +208,14 @@
     </button>
   </p> -->
 
-  <div class="collapse" id="collapseExample">
+  <!-- <div class="collapse" id="collapseExample">
     <div class="card card-body">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
       keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
     </div>
-  </div>
+  </div> -->
 
-  <div class="testimonials">
+  <!-- <div class="testimonials">
     <div class="testimonials__items">
       <img class="avatar__img" src="./images/defaultAvatar.png" alt="">
       <div class="testimonials__about">
@@ -254,21 +255,19 @@
         </article>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="ourteachers">
-    <!-- <img src="./images/mt-1579-home-teacher1.jpg" alt=""> -->
+  <!-- <div class="ourteachers">
     <div class="ourteachers__img">
       <div class="ourteachers__about">
         <h3 class="ourteachers__name">Amanda Rich</h3>
         <p class="ourteachers__position">Teacher</p>
       </div>
     </div>
+  </div> -->
 
-  </div>
-
-  <div class="ourclass">
+  <!-- <div class="ourclass">
     <div class="ourclass__list">
       <div class="ourclass__item">
         <div class="ourclass__img">
@@ -351,7 +350,8 @@
         placeholder="Message *" required></textarea>
       <input type="submit" class="buttons feedback__submit" value="Send">
     </form>
-  </div>
+  </div> -->
+
 
 
   <!-- <footer class="footer">
