feature header ipad done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
           </ul>
         </div>
       </div>
-
       <!-- <div class="full-screen-menu"></div> -->
       <div class="header__menu">
         <nav class="navbar navbar-expand-md navbar-pd">
@@ -121,44 +120,50 @@
 
       <div class="welcome__content">
         <img class="welcome__img" src="images/home_welcome/mt-1579-home-welcome.jpg" alt="">
-        <div class="welcome__list">
-          <ul id="tabs" class="nav nav-tabs nav-position" role="tablist">
-            <li class="nav-item" id="active-click">
-              <a id="tab-A" href="#pane-A" class="nav-link active nav-link-color" data-toggle="tab" role="tab">Our
-                Mission</a>
-            </li>
-            <li class="nav-item">
-              <a id="tab-B" href="#pane-B" class="nav-link nav-link-color" data-toggle="tab" role="tab">Overview</a>
-            </li>
-          </ul>
-          <div id="content" class="tab-content" role="tablist">
-            <div id="pane-A" class="card tab-pane fade show active card-tab-border" role="tabpanel" aria-labelledby="tab-A">
-              <div id="collapse-A" class="collapse show" role="tabpanel" aria-labelledby="heading-A">
-                <div class="card-body card-body-modify">
-                  Our mission is to provide excellence in preschool, kindergarten, before and after school programs and
-                  summer
-                  camp for families living in the greater local area. Here you’ll find exceptional teachers, curriculum
-                  and
-                  learning environments that encourage children to learn, play and explore in a safe and nurturing
-                  environment.
+        <div class="welcome__right">
+          <div class="welcome__list">
+            <ul id="tabs" class="nav nav-tabs nav-position" role="tablist">
+              <li class="nav-item" id="active-click">
+                <a id="tab-A" href="#pane-A" class="nav-link active nav-link-color" data-toggle="tab" role="tab">Our
+                  Mission</a>
+              </li>
+              <li class="nav-item">
+                <a id="tab-B" href="#pane-B" class="nav-link nav-link-color" data-toggle="tab" role="tab">Overview</a>
+              </li>
+            </ul>
+            <div id="content" class="tab-content" role="tablist">
+              <div id="pane-A" class="card tab-pane fade show active card-tab-border" role="tabpanel"
+                aria-labelledby="tab-A">
+                <div id="collapse-A" class="collapse show" role="tabpanel" aria-labelledby="heading-A">
+                  <div class="card-body card-body-modify">
+                    Our mission is to provide excellence in preschool, kindergarten, before and after school programs
+                    and
+                    summer
+                    camp for families living in the greater local area. Here you’ll find exceptional teachers,
+                    curriculum
+                    and
+                    learning environments that encourage children to learn, play and explore in a safe and nurturing
+                    environment.
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div id="pane-B" class="card tab-pane fade card-tab-border" role="tabpanel" aria-labelledby="tab-B">
-              <div id="collapse-B" class="collapse show" role="tabpanel" aria-labelledby="heading-B">
-                <div class="card-body card-body-modify">
-                  Sunrise offers a well-rounded curriculum based on free play, group and individual activities. The
-                  various
-                  activities included in the curriculum are based on varied monthly themes such as space, fire, water,
-                  earth,
-                  myself, family, people around us, birds, animals, insects, plants and more.
+              <div id="pane-B" class="card tab-pane fade card-tab-border" role="tabpanel" aria-labelledby="tab-B">
+                <div id="collapse-B" class="collapse show" role="tabpanel" aria-labelledby="heading-B">
+                  <div class="card-body card-body-modify">
+                    Sunrise offers a well-rounded curriculum based on free play, group and individual activities. The
+                    various
+                    activities included in the curriculum are based on varied monthly themes such as space, fire, water,
+                    earth,
+                    myself, family, people around us, birds, animals, insects, plants and more.
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <a class="buttons buttons--subscribe buttons--welcome">Our Programs</a>
         </div>
-        <a class="buttons buttons--subscribe buttons--welcome">Our Programs</a>
+
       </div>
 
     </div>
