done design ipad/desktop

--- a/index.html
+++ b/index.html
@@ -318,28 +318,28 @@
           teaching team, with enthusiasm and devotion to early childhood education..</p>
       </div>
       <div class="ourteachers__list">
-        <div class="ourteachers__list">
+        <div class="ourteachers__items">
           <img class="ourteachers__img" src="images/our_teachers/mt-1579-home-teacher1.jpg" alt="">
           <div class="ourteachers__about">
             <h3 class="ourteachers__name">Amanda Rich</h3>
             <p class="ourteachers__position">Teacher</p>
           </div>
         </div>
-        <div class="ourteachers__list">
+        <div class="ourteachers__items">
           <img class="ourteachers__img" src="images/our_teachers/mt-1579-home-teacher2.jpg" alt="">
           <div class="ourteachers__about">
             <h3 class="ourteachers__name">Amanda Rich</h3>
             <p class="ourteachers__position">Teacher</p>
           </div>
         </div>
-        <div class="ourteachers__list" class="ourteachers__img">
+        <div class="ourteachers__items">
           <img class="ourteachers__img" src="images/our_teachers/mt-1579-home-teacher3.jpg" alt="">
           <div class="ourteachers__about">
             <h3 class="ourteachers__name">Amanda Rich</h3>
             <p class="ourteachers__position">Teacher</p>
           </div>
         </div>
-        <div class="ourteachers__list">
+        <div class="ourteachers__items">
           <img class="ourteachers__img" src="images/our_teachers/mt-1579-home-teacher4.jpg" alt="">
           <div class="ourteachers__about">
             <h3 class="ourteachers__name">Amanda Rich</h3>
