Update link to shop

--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
                 <a class="nav-link nav-link-pd" href="#!">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-link-pd" href="#!">Pricing</a>
+                <a class="nav-link nav-link-pd" href="/shop">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-link-pd" href="#!">Contacts </a>
+                <a class="nav-link nav-link-pd" href="#!">Contacts</a>
               </li>
               <li class="nav-item nav-item-menu">
-                <a class="nav-link nav-link-pd" href="#!"> All blocks
-                </a>
+                <a class="nav-link nav-link-pd" href="#!">All blocks</a>
                 <ul class="menusub-list">
                   <li class="menusub-item"><a class="menusub-item-taga" href="">About</a></li>
                   <li class="menusub-item"><a class="menusub-item-taga" href="">Ads bar</a></li>
